updated generator
